added relations infotext (issue #405)

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1515,7 +1515,7 @@ post.meta.batch_edit                                    = edit own posts
 post.meta.changedOn                                     = changed on
 post.meta.copy_this_post                                = Copy this post.
 post.meta.display                                       = display
-post.meta.documents                                     = Here you see all of your publication posts which have a document attached.
+post.meta.documents                                     = Here you can see all of your publication posts which have a document attached.
 post.meta.duplicates                                    = All of your publication posts that are stored in your collection at least twice.
 post.meta.edit                                          = edit
 post.meta.edit.title                                    = edit the details of all your posts from this list
@@ -2460,6 +2460,7 @@ tagrelations = concepts
 
 tagrelations.all                              = all concepts
 tagrelations.all.text.partOne                 = Here you can see the most popular concepts in {0}.
+tagrelations.all.text.conceptsExplained		  = Concepts are groups of tags that are joined together by a supertag. Read more about concepts on the <a href='/help_en/Concepts'>concepts help page</a>.
 tagrelations.all.text.partTwo                 = You can access your own concepts via {0} and edit them on the {1} page. 
 tagrelations.all.title                        = get an overview of all concepts
 tagrelations.group                            = concepts of this group
