--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2447,6 +2447,7 @@ tagrelations = Konzepte
 
 tagrelations.all                              = alle Konzepte
 tagrelations.all.text.partOne                 = Hier sehen Sie die popul\u00E4rsten Konzepte in {0}.
+tagrelations.all.text.conceptsExplained		  = Konzepte sind Gruppen aus Tags, die durch einen Supertag miteinander verbunden sind. Lesen Sie mehr \u00FCber Konzepte auf der <a href='/help_en/Konzepte'>Konzepte-Hilfeseite</a>.
 tagrelations.all.text.partTwo                 = Ihre eigenen Konzepte finden Sie auf der Seite {0}, bearbeiten k\u00F6nnen Sie diese auf der Seite {1}.
 tagrelations.all.title                        = Alle Konzepte anzeigen
 tagrelations.group                            = Konzepte dieser Gruppe
