--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -838,6 +838,8 @@ friends.friendof             = you are a friend of
 friends.intro                = This page shows all posts of users which have added you to their friend list and which are visible only to friends. Find out more on the corresponding <a href="help_en/AddFriends">help page</a>. If you want to follow all posts of certain users, have a look at <a href="help_en/Spheres">Spheres</a> in {0}.
 friends.yourfriends          = your friends are
 
+general.learnmore = Learn more.
+
 gettingStarted = getting started
 
 gettingStarted.cite                  = {0} helps you create bibligraphies for scientific papers. If you use a specific tag for each bibliography and assign it to all your paper posts accordingly, you can use the tag to find all papers of the bibliography. Afterwards, you can export your publication list in the desired format. {0} supports <a href="/export">a lot of formats</a>, e.&nbsp;g. Microsoft Word Reference Manager, EndNote, and BibTeX.
@@ -1667,9 +1669,11 @@ post.resource.entrytype.book.description                = A book where a publish
 post.resource.entrytype.booklet.description             = A printed and bound work where no publisher or financing institution is given
 post.resource.entrytype.conference                      = conference*
 post.resource.entrytype.conference.description          = A contribution to a conference that did not appear in the proceedings
+post.resource.entrytype.description                     = The entry type of the publication.
 post.resource.entrytype.electronic                      = eletronic*
 post.resource.entrytype.electronic.description          = An electronic publication (e.g., a blog post)
-post.resource.entrytype.help                            = the type of the publication (non-standard types are marked with an asterisk):\n<dt>mastersthesis</dt>\n<dd></dd>\n<dt>misc</dt>\n<dd>An entry type for publications that do not fit into the other types</dd>\n<dt>patent*</dt>\n<dd>A patent</dd>\n<dt>periodical*</dt>\n<dd>A regularly appearing published work (e.g., a newspaper)</dd>\n<dt>phdthesis</dt>\n<dd>A dissertation</dd>\n<dt>preamble*</dt>\n<dd>An introductory statement</dd>\n<dt>presentation*</dt>\n<dd>A talk at an event</dd>\n<dt>proceedings</dt>\n<dd>A collection of papers published at a conference</dd>\n<dt>standard*</dt>\n<dd>A technical standard (e.g., ISO/IETF)</dd>\n<dt>techreport</dt>\n<dd>A work published by a university or other institution; typically a numbered work in a series</dd>\n<dt>unpublished</dt>\n<dd>A work with an author and title that has not been published</dd>\n</dl>
+post.resource.entrytype.help                            = <dl class="dl-horizontal">\n<dt>article</dt>\n<dd>An article from a scientific journal.</dd>\n<dt>book</dt>\n<dd>A book with an explicit publisher.</dd>\n<dt>booklet</dt>\n<dd>A work that is printed and bound, but without a named publisher or sponsoring institution.</dd>\n<dt>conference*</dt>\n<dd>A contribution to a conference that did not appear in the proceedings.</dd>\n<dt>electronic*</dt>\n<dd>An electronic publication (e.g., a blog post).</dd>\n<dt>inbook</dt>\n<dd>A part of a book (e.g., a chapter or a page range).</dd>\n<dt>incollection</dt>\n<dd>A part of a book with a separate title.</dd>\n<dt>inproceedings</dt>\n<dd>An article in the conference proceedings.</dd>\n<dt>manual</dt>\n<dd>A technical documentation.</dd>\n<dt>mastersthesis</dt>\n<dd>A bachelor or master's thesis (a more precise specification is possible with the "type" field).</dd>\n<dt>misc</dt>\n<dd>An entry type for publications that do not fit into the other types.</dd>\n<dt>patent*</dt>\n<dd>A patent.</dd>\n<dt>periodical*</dt>\n<dd>A regularly appearing published work (e.g., a newspaper).</dd>\n<dt>phdthesis</dt>\n<dd>A dissertation.</dd>\n<dt>preamble*</dt>\n<dd>An introductory statement.</dd>\n<dt>presentation*</dt>\n<dd>A talk at an event.</dd>\n<dt>proceedings</dt>\n<dd>A collection of papers published at a conference.</dd>\n<dt>standard*</dt>\n<dd>A technical standard (e.g., ISO/IETF).</dd>\n<dt>techreport</dt>\n<dd>A work published by a university or other institution; typically a numbered work in a series.</dd>\n<dt>unpublished</dt>\n<dd>A work with an author and title that has not been published.</dd>\n</dl>
+post.resource.entrytype.help.title                      = The type of the publication (non-standard types are marked with an asterisk)
 post.resource.entrytype.inbook.description              = A part of a book (e.g., a chapter or a page range)
 post.resource.entrytype.incollection.description        = A part of a book with a separate title
 post.resource.entrytype.inproceedings.description       = An article in the conference proceedings
@@ -2459,8 +2463,8 @@ tagbox.minfreq = minfreq
 tagrelations = concepts
 
 tagrelations.all                              = all concepts
+tagrelations.all.text.conceptsExplained       = Concepts are groups of tags that are joined together by a supertag. Read more about concepts on the <a href='/help_en/Concepts'>concepts help page</a>.
 tagrelations.all.text.partOne                 = Here you can see the most popular concepts in {0}.
-tagrelations.all.text.conceptsExplained		  = Concepts are groups of tags that are joined together by a supertag. Read more about concepts on the <a href='/help_en/Concepts'>concepts help page</a>.
 tagrelations.all.text.partTwo                 = You can access your own concepts via {0} and edit them on the {1} page. 
 tagrelations.all.title                        = get an overview of all concepts
 tagrelations.group                            = concepts of this group
