system wide openurl resolver

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -145,8 +145,10 @@ bibtex.actions.gold                          = community post
 bibtex.actions.heading                       = actions for all displayed publications:
 bibtex.actions.msword                        = MS Word
 bibtex.actions.msword.title                  = export this publication for MS Word Reference Manager
-bibtex.actions.openurl                       = OpenURL
+bibtex.actions.openurl                       = Your OpenURL resolver
 bibtex.actions.openurl.inactive              = add an openURL resolver to your profile (settings)
+bibtex.actions.openurl.system                = Default OpenURL provider
+bibtex.actions.openurl.system.title          = query the default OpenURL server with the metadata of this publication
 bibtex.actions.openurl.title                 = query your OpenURL server with the metadata of this publication
 bibtex.actions.pick.inactive                 = sign in to add or remove posts from your clipboard
 # BibTex actions
