--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -144,8 +144,10 @@ bibtex.actions.gold                          = Gemeinschaftseintrag
 bibtex.actions.heading                       = Aktionen f\u00FCr alle angezeigten Publikationen:
 bibtex.actions.msword                        = MS Word
 bibtex.actions.msword.title                  = Diese Publikation f\u00FCr MS Word Reference Manager exportieren
-bibtex.actions.openurl                       = OpenURL
+bibtex.actions.openurl                       = Ihr OpenURL-Server
 bibtex.actions.openurl.inactive              = Geben Sie in Ihrem Profil (Einstellungen) einen openURL-Linkresolver an.
+bibtex.actions.openurl.system                = Standard OpenURL-Server
+bibtex.actions.openurl.system.title          = Eine Anfrage mit den Metadaten dieser Publikation an den standard OpenURL-Server senden
 bibtex.actions.openurl.title                 = Eine Anfrage mit den Metadaten dieser Publikation an ihren OpenURL-Server senden
 bibtex.actions.pick.inactive                 = Melden Sie sich an um Eintr\u00E4ge zu Ihrer Ablage hinzuzuf\u00FCgen oder zu entfernen.
 # BibTex actions
