--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -136,8 +136,10 @@ bibtex.actions.gold                          = \u0437\u0430\u043F\u0438\u0441\u0
 bibtex.actions.heading                       = \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044F \u0434\u043B\u044F \u0432\u0441\u0435\u0445 \u043F\u043E\u043A\u0430\u0437\u0430\u043D\u043D\u044B\u0445 \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u0439:
 bibtex.actions.msword                        = MS Word
 bibtex.actions.msword.title                  = \u044D\u043A\u0441\u043F\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0434\u0430\u043D\u043D\u0443\u044E \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044E \u0434\u043B\u044F \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C\u044B MS Word Reference Manager
-bibtex.actions.openurl                       = OpenURL
+bibtex.actions.openurl                       = 
 bibtex.actions.openurl.inactive              = \u0417\u0430\u0434\u0430\u0439\u0442\u0435 \u0432 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430\u0445 \u043F\u0440\u043E\u0444\u0438\u043B\u044F \u0440\u0435\u0437\u043E\u043B\u0432\u0435\u0440 openURL.
+bibtex.actions.openurl.system                = 
+bibtex.actions.openurl.system.title          = 
 bibtex.actions.openurl.title                 = \u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C \u0437\u0430\u043F\u0440\u043E\u0441 \u043D\u0430 openURL-Server \u043F\u043E \u043F\u043E\u0432\u043E\u0434\u0443 \u043C\u0435\u0442\u0430\u0434\u0430\u043D\u043D\u044B\u0445 \u0434\u0430\u043D\u043D\u043E\u0439 \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u0438
 bibtex.actions.pick.inactive                 = \u0412\u043E\u0439\u0434\u0438\u0442\u0435 \u0432 \u0441\u0438\u0441\u0442\u0435\u043C\u0443, \u0447\u0442\u043E\u0431\u044B \u0434\u043E\u0431\u0430\u0432\u043B\u044F\u0442\u044C, \u0438\u043B\u0438 \u0443\u0434\u0430\u043B\u044F\u0442\u044C \u0437\u0430\u043F\u0438\u0441\u0438 \u0432 \u0432\u0430\u0448\u0435\u043C \u0431\u0443\u0444\u0435\u0440\u0435.
 # BibTex actions
