--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2087,6 +2087,8 @@ settings.editPublication.interFace.help.advanced            = {0}: Alle Optionen
 settings.editPublication.interFace.help.simple              = {0}: Einige "Experten"-Optionen werden nicht standardm\u00E4\u00DFig angezeigt.
 settings.enabled                                            = Aktiviert
 settings.english                                            = Englisch
+settings.favouriteExports                                   = Bevorzugte Exportformate
+settings.favouriteExports.add                               = Exportformat hinzuf\u00FCgen
 settings.female                                             = Frau
 settings.frequency                                          = H\u00E4ufigkeit
 settings.friendOf                                           = Ich bin ein Freund von
