--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2102,6 +2102,8 @@ settings.editPublication.interFace.help.advanced            = {0}: all options a
 settings.editPublication.interFace.help.simple              = {0}: some "expert" options will be hidden
 settings.enabled                                            = enabled
 settings.english                                            = English
+settings.favouriteExports                                   = favourite export formats
+settings.favouriteExports.add                               = add export format
 settings.female                                             = female
 settings.frequency                                          = frequency
 settings.friendOf                                           = I'm a friend of
