--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1888,6 +1888,8 @@ settings.editPublication.interFace.help.advanced            = {0}: \u0431\u0443\
 settings.editPublication.interFace.help.simple              = {0}: \u043D\u0435\u043A\u043E\u0442\u043E\u0440\u044B\u0435 \u043E\u043F\u0446\u0438\u0438 \u0434\u043B\u044F "\u044D\u043A\u0441\u043F\u0435\u0440\u0442\u043E\u0432" \u043D\u0435 \u0431\u0443\u0434\u0443\u0442 \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0430\u0442\u044C\u0441\u044F
 settings.enabled                                            = \u0432\u043A\u043B\u044E\u0447\u0435\u043D\u043E
 settings.english                                            = \u0430\u043D\u0433\u043B\u0438\u0439\u0441\u043A\u0438\u0439
+settings.favouriteExports                                   = 
+settings.favouriteExports.add                               = 
 settings.female                                             = \u0436\u0435\u043D\u0441\u043A\u0438\u0439
 settings.frequency                                          = \u0447\u0430\u0441\u0442\u043E\u0442\u0430
 settings.friendOf                                           = \u042F \u0434\u0440\u0443\u0433 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
