export favs: own title for each export format
fixed jabref typeahead

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -128,7 +128,6 @@ bibtex.actions.additional_url.delete         = delete
 bibtex.actions.additional_url.delete.title   = delete this additional URL
 bibtex.actions.bibtex                        = BibTeX
 bibtex.actions.bibtex.short                  = TeX
-bibtex.actions.bibtex.title                  = show this publication in BibTeX format
 bibtex.actions.copy.inactive                 = Sign in to copy this publication into your collection.
 bibtex.actions.copy.title                    = copy this publication to your repository
 bibtex.actions.delete.confirm                = Do you really want to delete this publication?
@@ -138,7 +137,6 @@ bibtex.actions.doi                           = DOI
 bibtex.actions.doi.inactive                  = No DOI is attached to this post.
 bibtex.actions.edit.title                    = edit this publication
 bibtex.actions.endnote                       = EndNote
-bibtex.actions.endnote.title                 = export this publication in Endnote format
 bibtex.actions.filedeleted                   = The file {0} has been deleted.
 bibtex.actions.filerenamed                   = The document {0} has been renamed to {1}.
 bibtex.actions.gold                          = community post
@@ -1887,7 +1885,10 @@ previous = &lang;
 
 privacy = privacy
 
-publication.import.title          = Import publications
+publication.export.simple_bibtex.title  = show this publication in BibTeX format
+publication.export.simple_endnote.title = export this publication in Endnote format
+publication.export.title                = show this publication in {0} format
+publication.import.title                = Import publications
 
 publications = publications
 
