--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -127,7 +127,6 @@ bibtex.actions.additional_url.delete         = L&ouml;schen
 bibtex.actions.additional_url.delete.title   = diese zus&auml;tzliche URL l&ouml;schen
 bibtex.actions.bibtex                        = BibTeX
 bibtex.actions.bibtex.short                  = TeX
-bibtex.actions.bibtex.title                  = Diese Publikation im BibTeX-Format anzeigen
 bibtex.actions.copy.inactive                 = Melden Sie sich an um diese Publikation in Ihre eigene Sammlung zu kopieren.
 bibtex.actions.copy.title                    = Diese Publikation in die eigene Sammlung kopieren
 bibtex.actions.delete.confirm                = Wollen Sie diese Publikation wirklich l\u00F6schen?
@@ -137,7 +136,6 @@ bibtex.actions.doi                           = DOI
 bibtex.actions.doi.inactive                  = Zu diesem Eintrag wurde kein DOI angegeben.
 bibtex.actions.edit.title                    = Diese Publikation bearbeiten
 bibtex.actions.endnote                       = EndNote
-bibtex.actions.endnote.title                 = Diese Publikation im EndNote-Format exportieren
 bibtex.actions.filedeleted                   = Die Datei {0} wurde gel\u00F6scht.
 bibtex.actions.filerenamed                   = Das Dokument {0} wurde umbenannt in {1}.
 bibtex.actions.gold                          = Gemeinschaftseintrag
@@ -1872,7 +1870,10 @@ previous = &lang;
 
 privacy = Privacy
 
-publication.import.title          = Publikationen importieren
+publication.export.simple_bibtex.title  = Diese Publikation im BibTeX-Format anzeigen
+publication.export.simple_endnote.title = Diese Publikation im EndNote-Format exportieren
+publication.export.title                = Diese Publikation im {0} Format anzeigen
+publication.import.title                = Publikationen importieren
 
 publications = Publikationen
 
