--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -119,7 +119,6 @@ bibtex.actions.additional_url.delete         = \u0443\u0434\u0430\u043B\u0438\u0
 bibtex.actions.additional_url.delete.title   = \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u0434\u043E\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C\u043D\u044B\u0439 URL
 bibtex.actions.bibtex                        = BibTeX
 bibtex.actions.bibtex.short                  = TeX
-bibtex.actions.bibtex.title                  = \u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0434\u0430\u043D\u043D\u0443\u044E \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044E \u0432 \u0444\u043E\u0440\u043C\u0430\u0442\u0435 BibTeX
 bibtex.actions.copy.inactive                 = \u0427\u0442\u043E\u0431\u044B \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0434\u0430\u043D\u043D\u0443\u044E \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044E \u0432 \u0432\u0430\u0448\u0443 \u043A\u043E\u043B\u043B\u0435\u043A\u0446\u0438\u044E, \u0432\u043E\u0439\u0434\u0438\u0442\u0435 \u0432 \u0441\u0438\u0441\u0442\u0435\u043C\u0443.
 bibtex.actions.copy.title                    = \u043A\u043E\u043F\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044E \u0432 \u0441\u0432\u043E\u044E \u043A\u043E\u043B\u043B\u0435\u043A\u0446\u0438\u044E
 bibtex.actions.delete.confirm                = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u044D\u0442\u0443 \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044E?
@@ -129,7 +128,6 @@ bibtex.actions.doi                           = DOI
 bibtex.actions.doi.inactive                  = \u0423 \u044D\u0442\u043E\u0439 \u0437\u0430\u043F\u0438\u0441\u0438 \u043E\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u0435\u0442 DOI.
 bibtex.actions.edit.title                    = \u0440\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044E
 bibtex.actions.endnote                       = EndNote
-bibtex.actions.endnote.title                 = \u044D\u043A\u0441\u043F\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u044D\u0442\u0443 \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044E \u0432 \u0444\u043E\u0440\u043C\u0430\u0442\u0435 EndNote
 bibtex.actions.filedeleted                   = \u0424\u0430\u0439\u043B {0} \u0443\u0434\u0430\u043B\u0435\u043D
 bibtex.actions.filerenamed                   = \u0424\u0430\u0439\u043B {0} \u043F\u0435\u0440\u0435\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D \u0432 {1}.
 bibtex.actions.gold                          = \u0437\u0430\u043F\u0438\u0441\u044C \u0441\u043E\u043E\u0431\u0449\u0435\u0441\u0442\u0432\u0430
@@ -1687,7 +1685,10 @@ previous = &lang;
 
 privacy = \u043F\u0440\u0438\u0432\u0430\u0442\u043D\u043E\u0441\u0442\u044C
 
-publication.import.title          = 
+publication.export.simple_bibtex.title  = \u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0434\u0430\u043D\u043D\u0443\u044E \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044E \u0432 \u0444\u043E\u0440\u043C\u0430\u0442\u0435 BibTeX
+publication.export.simple_endnote.title = \u044D\u043A\u0441\u043F\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u044D\u0442\u0443 \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044E \u0432 \u0444\u043E\u0440\u043C\u0430\u0442\u0435 EndNote
+publication.export.title                = \u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0434\u0430\u043D\u043D\u0443\u044E \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044E \u0432 \u0444\u043E\u0440\u043C\u0430\u0442\u0435 {0}
+publication.import.title                = 
 
 publications = \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u0438
 
