fixing #1903 and #2613 added UserNotFoundException and made StaticViewController ErrorAware. not yet beautiful, but working for now.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1086,8 +1086,10 @@ mail.group.activation.body           = Hello {0}!\n\nYour group {1} has been cre
 mail.group.activation.subject        = Your group {1} has been created!
 mail.group.decline.body              = Hello {0}!\n\nYour request for creating the group {1} has been declined.\n\n{2}\n\nReplies to this e-mail address are deleted, please send questions to {4}.
 mail.group.decline.subject           = Your group creation request has been declined!
-mail.groupInvite.body                = \nHello {0}!\n\nUser {1} has invited you to join {2}.\n\nVisit {8} to accept or decline the invitation.\n\nHave a look on the help page:\n{3}help_en\n\nNews regarding {6} can be found in our blog:\n{4}\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
-mail.groupInvite.subject             = Group invitation to {2}
+mail.group.invite.body               = \nHello {0}!\n\nUser {1} has invited you to join {2}.\n\nVisit {8} to accept or decline the invitation.\n\nHave a look on the help page:\n{3}help_en\n\nNews regarding {6} can be found in our blog:\n{4}\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
+mail.group.invite.subject            = Group invitation to {2}
+mail.group.userjoined.body           = Hello {0}!\r\n\r\nYou have been added to the group {1}. You can visit its group page under {2}.\r\n\r\nHave fun using {4}!\r\n\r\nReplies to this e-mail address are deleted, please send questions to {5}.
+mail.group.userjoined.subject        = Your group {1} has been created!
 mail.joinGroupRequest.body           = \nHello {0}!\n\nUser {1} has sent a request to join your group.\n\nReason: {2}\n\nVisit {8}\n\nHave a look on the help page:\n{3}help_en\n\nNews regarding {3} can be found in our blog:\n{9}\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
 mail.joinGroupRequest.denied.body    = \nHello {1}\n\nYour request to join group {0} has been denied.\n\nReason: {2}\n\nHave a look on the help page:\n{3}help_en\n\nNews regarding {3} can be found in our blog:\n{6}\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
 mail.joinGroupRequest.denied.subject = Your join request for group {0}
@@ -2164,6 +2166,10 @@ settings.group.login                                        = Sorry, you are not
 settings.group.memberList                                   = member list
 settings.group.memberList.empty                             = no users in group
 settings.group.memberList.help                              = set the privacy level of your member list
+settings.group.migrate                                      = Migrate Group
+settings.group.migrate.InfoText                             = You can migrate this group now. If you do this, the account of the group user will be made inaccessible.
+settings.group.migrate.noOtherAdminsInfoText                = You cannot migrate this group, since there are no other admins in this group besides you. Please promote another user to the admin role.
+settings.group.migrate.yesToMigrateGroup                    = Type yes to migrate this group.
 settings.group.name                                         = group name
 settings.group.noGroups                                     = You aren't a member of any group.
 settings.group.pendingGroupRequests                         = pending requests
