--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1031,8 +1031,10 @@ mail.activation.body                 = \u0421\u043F\u0430\u0441\u0438\u0431\u043
 mail.activation.subject              = \u0410\u043A\u0442\u0438\u0432\u0430\u0446\u0438\u044F \u0443\u0447\u0435\u0442\u043D\u043E\u0439 \u0437\u0430\u043F\u0438\u0441\u0438 {1} \u043F\u0440\u043E\u0448\u043B\u0430 \u0443\u0441\u043F\u0435\u0448\u043D\u043E
 mail.group.activation.body           = \u0417\u0434\u0440\u0430\u0432\u0441\u0442\u0432\u0443\u0439\u0442\u0435, {0}!\n\n\u0412\u0430\u0448\u0430 \u0433\u0440\u0443\u043F\u043F\u0430 {1} \u0431\u044B\u043B\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0430. \u0412\u044B \u043C\u043E\u0436\u0435\u0442\u0435 \u043F\u043E\u0441\u0435\u0442\u0438\u0442\u044C \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0443 \u0441\u0432\u043E\u0435\u0439 \u0433\u0440\u0443\u043F\u043F\u044B, \u043F\u0440\u043E\u0439\u0434\u044F \u043F\u043E \u0441\u0441\u044B\u043B\u043A\u0435: {2} \u0438 \u0440\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0433\u0440\u0443\u043F\u043F\u044B \u043F\u043E \u0441\u043B\u0435\u0434\u0443\u044E\u0449\u0435\u0439 \u0441\u0441\u044B\u043B\u043A\u0435: {3}.\n\n\u0423\u0434\u0430\u0447\u0438 \u0432 \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u043D\u0438\u0438 {4}!\n\n\u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430 \u043D\u0435 \u043E\u0442\u0432\u0435\u0447\u0430\u0439\u0442\u0435 \u043D\u0430 \u044D\u0442\u043E \u043F\u0438\u0441\u044C\u043C\u043E. \u0412\u0441\u0435 \u043F\u0438\u0441\u044C\u043C\u0430, \u043F\u0440\u0438\u0448\u0435\u0434\u0448\u0438\u0435 \u043D\u0430 \u0430\u0434\u0440\u0435\u0441 \u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u0435\u043B\u044F, \u0431\u0443\u0434\u0443\u0442 \u0443\u0434\u0430\u043B\u0435\u043D\u044B. \u0415\u0441\u043B\u0438 \u0443 \u0432\u0430\u0441 \u0432\u043E\u0437\u043D\u0438\u043A\u043B\u0438 \u0432\u043E\u043F\u0440\u043E\u0441\u044B, \u043F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430 \u0441\u0432\u044F\u0436\u0438\u0442\u0435\u0441\u044C \u0441 \u043D\u0430\u043C\u0438 \u043F\u043E \u0441\u043B\u0435\u0434\u0443\u044E\u0449\u0435\u043C\u0443 \u0430\u0434\u0440\u0435\u0441\u0443: {5}.
 mail.group.activation.subject        = \u0412\u0430\u0448\u0430 \u0433\u0440\u0443\u043F\u043F\u0430 {1} \u0431\u044B\u043B\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0430!
-mail.groupInvite.body                = 
-mail.groupInvite.subject             = \u041F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u0435 \u0432 \u0433\u0440\u0443\u043F\u043F\u0443 {2}
+mail.group.invite.body               = 
+mail.group.invite.subject            = \u041F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u0435 \u0432 \u0433\u0440\u0443\u043F\u043F\u0443 {2}
+mail.group.userjoined.body           = 
+mail.group.userjoined.subject        = 
 mail.joinGroupRequest.body           = 
 mail.joinGroupRequest.denied.body    = 
 mail.joinGroupRequest.denied.subject = \u0412\u0430\u0448 \u0437\u0430\u043F\u0440\u043E\u0441 \u043D\u0430 \u0432\u0441\u0442\u0443\u043F\u043B\u0435\u043D\u0438\u0435 \u0432 \u0433\u0440\u0443\u043F\u043F\u0443 {0}
@@ -1931,6 +1933,10 @@ settings.group.login                                        = \u0418\u0437\u0432
 settings.group.memberList                                   = \u0441\u043F\u0438\u0441\u043E\u043A \u0447\u043B\u0435\u043D\u043E\u0432
 settings.group.memberList.empty                             = \u0412 \u0433\u0440\u0443\u043F\u043F\u0435 \u043D\u0435\u0442 \u0447\u043B\u0435\u043D\u043E\u0432
 settings.group.memberList.help                              = \u043D\u0430\u0441\u0442\u0440\u043E\u0438\u0442\u044C \u0432\u0438\u0434\u0438\u043C\u043E\u0441\u0442\u044C \u0434\u043B\u044F \u0447\u043B\u0435\u043D\u043E\u0432 \u0441\u0432\u043E\u0435\u0439 \u0433\u0440\u0443\u043F\u043F\u044B
+settings.group.migrate                                      = 
+settings.group.migrate.InfoText                             = 
+settings.group.migrate.noOtherAdminsInfoText                = 
+settings.group.migrate.yesToMigrateGroup                    = 
 settings.group.name                                         = \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0433\u0440\u0443\u043F\u043F\u044B
 settings.group.noGroups                                     = \u0412\u044B \u043D\u0435 \u043F\u0440\u0438\u043D\u0430\u0434\u043B\u0435\u0436\u0438\u0442\u0435 \u043D\u0438 \u043A \u043E\u0434\u043D\u043E\u0439 \u0433\u0440\u0443\u043F\u043F\u0435
 settings.group.pendingInvites                               = \u043F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u044F \u0432 \u0433\u0440\u0443\u043F\u043F\u044B
