reenabled renaming and uploading file

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1887,7 +1887,10 @@ previous = &lang;
 
 privacy = privacy
 
-publication.import.title          = Import publications
+publication.documents.rename          = Rename Document
+publication.documents.rename.progress = renaming document
+publication.documents.rename.success  = Renamed document.
+publication.import.title              = Import publications
 
 publications = publications
 
