--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1872,7 +1872,10 @@ previous = &lang;
 
 privacy = Privacy
 
-publication.import.title          = Publikationen importieren
+publication.documents.rename          = Dokument umbenennen
+publication.documents.rename.progress = Benenne Dokument um
+publication.documents.rename.success  = Dokument umbenannt.
+publication.import.title              = Publikationen importieren
 
 publications = Publikationen
 
