--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1687,7 +1687,10 @@ previous = &lang;
 
 privacy = \u043F\u0440\u0438\u0432\u0430\u0442\u043D\u043E\u0441\u0442\u044C
 
-publication.import.title          = 
+publication.documents.rename          = 
+publication.documents.rename.progress = 
+publication.documents.rename.success  = 
+publication.import.title              = 
 
 publications = \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u0438
 
