--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/APHAScraperUnitURLTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/APHAScraperUnitURLTest4.bib
@@ -2,7 +2,7 @@
 author = {Mike Thelwall},
 title = {UNIVERSITIES: INTERNATIONAL LINKS},
 booktitle = {Link Analysis: An Information Science Approach},
-chapter = {8},
+chapter = {},
 pages = {93-100},
 doi = {10.1108/S1876-0562(2004)0000004009},
 URL = {http://emeraldinsight.com/doi/abs/10.1108/S1876-0562%282004%290000004009},
