added function to copy to local clipboard
modal view for export format using the action menu in a resource list

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -721,24 +721,26 @@ example = Beispiel
 
 export = Export
 
-export.bibtex.faq     = <a href="http://en.wikipedia.org/wiki/BibTeX">BibTeX</a> ist ein popul\u00E4res Verwaltungswerkzeug f\u00FCr Literaturreferenzen in <a href="http://en.wikipedia.org/wiki/LaTeX">LaTeX</a>. Speichern Sie die Ausgabe und binden Sie diese mit dem Befehl <code>bibliography{FILENAME}</code> in Ihre LaTeX-Datei ein. Das Argument <code>FILENAME</code> muss anschlie\u00DFend durch den Namen der Datei, in der Sie die Ausgabe gespeichert haben, ersetzt werden (ohne die Endung <code>.bib</code>).
-export.bibtex.record  = BibTeX-Eintrag
-export.bibtex.title   = als BibTeX exportieren
-export.burst.faq      = Ein g\u00FCltiger <a href="http://en.wikipedia.org/wiki/RSS">RSS</a> Feed entsprechend der <a href="http://en.wikipedia.org/wiki/RDF">RDF</a>-Spezifikation. Sie k\u00F6nnen diesen mit einem geeigneten RSS-Programm einlesen. Die Ausgabe vereint RSS und SWRC.
-export.csl.caption    = CSL Eingabeformat (JSON)
-export.csl.faq        = Die <a href="http://citationstyles.org/">Citation Style Language</a> (CSL) ist eine offene, auf XML basierende Sprache, um bibliografische Angaben und Zitationen zu formatieren. Dieser JSON Export ist mit den meisten <a href="http://citationstyles.org/developers/">CiteProc Implementationen</a> kompatibel.
-export.custom.faq     = Ein benutzerspezifisches <a href="http://jabref.sourceforge.net/">JabRef</a>-Layout, das auf der Seite <a href="/settings?selTab=2#layout">Einstellungen</a> hochgeladen werden kann. Informationen zum Schreiben eines solchen Layout-Filters finden Sie <a href="http://jabref.sourceforge.net/help/CustomExports.php">hier</a>.
-export.endnote.record = Endnote-Eintrag
-export.format         = Format
+export.bibtex.faq                   = <a href="http://en.wikipedia.org/wiki/BibTeX">BibTeX</a> ist ein popul\u00E4res Verwaltungswerkzeug f\u00FCr Literaturreferenzen in <a href="http://en.wikipedia.org/wiki/LaTeX">LaTeX</a>. Speichern Sie die Ausgabe und binden Sie diese mit dem Befehl <code>bibliography{FILENAME}</code> in Ihre LaTeX-Datei ein. Das Argument <code>FILENAME</code> muss anschlie\u00DFend durch den Namen der Datei, in der Sie die Ausgabe gespeichert haben, ersetzt werden (ohne die Endung <code>.bib</code>).
+export.bibtex.record                = BibTeX-Eintrag
+export.bibtex.title                 = als BibTeX exportieren
+export.burst.faq                    = Ein g\u00FCltiger <a href="http://en.wikipedia.org/wiki/RSS">RSS</a> Feed entsprechend der <a href="http://en.wikipedia.org/wiki/RDF">RDF</a>-Spezifikation. Sie k\u00F6nnen diesen mit einem geeigneten RSS-Programm einlesen. Die Ausgabe vereint RSS und SWRC.
+export.copyToLocalClipboard         = Zitation zur lokalen Zwischenablage hinzuf\u00FCgen.
+export.copyToLocalClipboard.success = Zitation zur lokalen Zwischenablage hinzugef\u00FCgt.
+export.csl.caption                  = CSL Eingabeformat (JSON)
+export.csl.faq                      = Die <a href="http://citationstyles.org/">Citation Style Language</a> (CSL) ist eine offene, auf XML basierende Sprache, um bibliografische Angaben und Zitationen zu formatieren. Dieser JSON Export ist mit den meisten <a href="http://citationstyles.org/developers/">CiteProc Implementationen</a> kompatibel.
+export.custom.faq                   = Ein benutzerspezifisches <a href="http://jabref.sourceforge.net/">JabRef</a>-Layout, das auf der Seite <a href="/settings?selTab=2#layout">Einstellungen</a> hochgeladen werden kann. Informationen zum Schreiben eines solchen Layout-Filters finden Sie <a href="http://jabref.sourceforge.net/help/CustomExports.php">hier</a>.
+export.endnote.record               = Endnote-Eintrag
+export.format                       = Format
 #Export Seite
-export.header         = Publikationsexport
-export.html.faq       = Eine einfach formatierte <a href="http://en.wikipedia.org/wiki/HTML">HTML</a>-Seite, die Sie in Ihre Homepage einf\u00FCgen k\u00F6nnen.
-export.info           = W\u00E4hlen Sie ein Format aus, in das die Publikationen der Seite {0} exportiert werden sollen.  
-export.jabref.explain = Diese Exportfilter stammen von <a href="http://jabref.sourceforge.net/">JabRef</a>. Dies ist ein Werkzeug f\u00FCr die Verwaltung von Publikationsreferenzen auf dem Desktop.<br />\n\u0009\u0009Es beinhaltet einen Mechanismus f\u00FCr das Schreiben von Layoutdateien, die das  Exportieren von formatierten Referenzen erlauben. 
-export.json.faq       = <a href="http://www.json.org/">JSON</a> (JavaScript Object Notation) ist ein leichtgewichtiges Austauschformat f\u00FCr die Webprogrammierung mit JavaScript. Mittels der Option <tt>callback</tt> erhalten Sie eine Ausgabe im JSONP-Format.
-export.layout         = Layout exportieren
-export.rss.faq        = Mit einem geeigneten <a href="http://en.wikipedia.org/wiki/RSS">RSS</a>-Programm k\u00F6nnen Sie sich an diesem RSS-Feed anmelden. Sie werden dadurch benachrichtigt, sobald eine Publikation hinzugef\u00FCgt wurde.
-export.swrc.faq       = Eine <a href="http://en.wikipedia.org/wiki/RDF">RDF</a>-Ausgabe entsprechend der <a href="http://ontoware.org/projects/swrc/">SWRC</a>-Ontologie.   
+export.header                       = Publikationsexport
+export.html.faq                     = Eine einfach formatierte <a href="http://en.wikipedia.org/wiki/HTML">HTML</a>-Seite, die Sie in Ihre Homepage einf\u00FCgen k\u00F6nnen.
+export.info                         = W\u00E4hlen Sie ein Format aus, in das die Publikationen der Seite {0} exportiert werden sollen.  
+export.jabref.explain               = Diese Exportfilter stammen von <a href="http://jabref.sourceforge.net/">JabRef</a>. Dies ist ein Werkzeug f\u00FCr die Verwaltung von Publikationsreferenzen auf dem Desktop.<br />\n\u0009\u0009Es beinhaltet einen Mechanismus f\u00FCr das Schreiben von Layoutdateien, die das  Exportieren von formatierten Referenzen erlauben. 
+export.json.faq                     = <a href="http://www.json.org/">JSON</a> (JavaScript Object Notation) ist ein leichtgewichtiges Austauschformat f\u00FCr die Webprogrammierung mit JavaScript. Mittels der Option <tt>callback</tt> erhalten Sie eine Ausgabe im JSONP-Format.
+export.layout                       = Layout exportieren
+export.rss.faq                      = Mit einem geeigneten <a href="http://en.wikipedia.org/wiki/RSS">RSS</a>-Programm k\u00F6nnen Sie sich an diesem RSS-Feed anmelden. Sie werden dadurch benachrichtigt, sobald eine Publikation hinzugef\u00FCgt wurde.
+export.swrc.faq                     = Eine <a href="http://en.wikipedia.org/wiki/RDF">RDF</a>-Ausgabe entsprechend der <a href="http://ontoware.org/projects/swrc/">SWRC</a>-Ontologie.   
 
 # RSS feed titles
 feeds.bookmark    = Lesezeichen RSS-Feed f\u00FCr
@@ -1870,12 +1872,12 @@ previous = &lang;
 
 privacy = Privacy
 
+publication.documents.rename            = Dokument umbenennen
+publication.documents.rename.progress   = Benenne Dokument um
+publication.documents.rename.success    = Dokument umbenannt.
 publication.export.simple_bibtex.title  = Diese Publikation im BibTeX-Format anzeigen
 publication.export.simple_endnote.title = Diese Publikation im EndNote-Format exportieren
 publication.export.title                = Diese Publikation im {0} Format anzeigen
-publication.documents.rename          = Dokument umbenennen
-publication.documents.rename.progress = Benenne Dokument um
-publication.documents.rename.success  = Dokument umbenannt.
 publication.import.title                = Publikationen importieren
 
 publications = Publikationen
