--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -724,24 +724,26 @@ example = example
 
 export = export
 
-export.bibtex.faq     = <a href="http://en.wikipedia.org/wiki/BibTeX">BibTeX</a> is a popular bibliography management tool for <a href="http://en.wikipedia.org/wiki/LaTeX">LaTeX</a>. Save this output and include it in your LaTeX file with the command <code>bibliography{FILENAME}</code> by substituting <code>FILENAME</code> with the name you gave the file while saving it and omitting the <code>.bib</code> ending.
-export.bibtex.record  = BibTeX record
-export.bibtex.title   = export as BibTeX
-export.burst.faq      = This is an <a href="http://en.wikipedia.org/wiki/RDF">RDF</a> output according to the <a href="http://www.cs.vu.nl/~pmika/research/burst/BuRST.html">BuRST</a> specification. It is a valid <a href="http://en.wikipedia.org/wiki/RSS">RSS</a> feed, therefore you can subscribe to it with appropriate applications. It is basically a union of the RSS and SWRC output.
-export.csl.caption    = CSL input format (JSON)
-export.csl.faq        = The <a href="http://citationstyles.org/">Citation Style Language</a> (CSL)  is an open XML-based language to format bibliographies and citations. This JSON export is compatible with most of the <a href="http://citationstyles.org/developers/">CiteProc implementations</a>.
-export.custom.faq     = A custom <a href="http://jabref.sourceforge.net/">JabRef</a> layout which you can upload on the <a href="/settings?selTab=2#layout">settings</a> page. Information on how to write such a layout filter can be found <a href="http://jabref.sourceforge.net/help/CustomExports.php">here</a>.
-export.endnote.record = Endnote record
-export.format         = format
+export.bibtex.faq                   = <a href="http://en.wikipedia.org/wiki/BibTeX">BibTeX</a> is a popular bibliography management tool for <a href="http://en.wikipedia.org/wiki/LaTeX">LaTeX</a>. Save this output and include it in your LaTeX file with the command <code>bibliography{FILENAME}</code> by substituting <code>FILENAME</code> with the name you gave the file while saving it and omitting the <code>.bib</code> ending.
+export.bibtex.record                = BibTeX record
+export.bibtex.title                 = export as BibTeX
+export.burst.faq                    = This is an <a href="http://en.wikipedia.org/wiki/RDF">RDF</a> output according to the <a href="http://www.cs.vu.nl/~pmika/research/burst/BuRST.html">BuRST</a> specification. It is a valid <a href="http://en.wikipedia.org/wiki/RSS">RSS</a> feed, therefore you can subscribe to it with appropriate applications. It is basically a union of the RSS and SWRC output.
+export.copyToLocalClipboard         = Copy citation to your local clipboard.
+export.copyToLocalClipboard.success = Copied citation to your local clipboard.
+export.csl.caption                  = CSL input format (JSON)
+export.csl.faq                      = The <a href="http://citationstyles.org/">Citation Style Language</a> (CSL)  is an open XML-based language to format bibliographies and citations. This JSON export is compatible with most of the <a href="http://citationstyles.org/developers/">CiteProc implementations</a>.
+export.custom.faq                   = A custom <a href="http://jabref.sourceforge.net/">JabRef</a> layout which you can upload on the <a href="/settings?selTab=2#layout">settings</a> page. Information on how to write such a layout filter can be found <a href="http://jabref.sourceforge.net/help/CustomExports.php">here</a>.
+export.endnote.record               = Endnote record
+export.format                       = format
 # export page
-export.header         = Export publications
-export.html.faq       = This gives you a simple <a href="http://en.wikipedia.org/wiki/HTML">HTML</a> formatted page which you can include into your homepage.
-export.info           = By selecting one of the formats you can export the publications of the page {0} in that format.
-export.jabref.explain = These export filters are from <a href="http://jabref.sourceforge.net/">JabRef</a>, a tool to manage publication references on the desktop.<br />\n\u0009\u0009It includes a mechanism to write layout files which allow the export of references in a nicely formatted way.
-export.json.faq       = <a href="http://www.json.org/">JSON</a> (JavaScript Object Notation) is a lightweight exchange format for web programming with JavaScript. Using the <tt>callback</tt> parameter you get output in JSONP format.
-export.layout         = export layout
-export.rss.faq        = With an appropriate <a href="http://en.wikipedia.org/wiki/RSS">RSS</a>-tool you can subscribe to this RSS feed and get notifications when someone adds publications to it.
-export.swrc.faq       = This is an <a href="http://en.wikipedia.org/wiki/RDF">RDF</a> output according to the <a href="http://ontoware.org/projects/swrc/">SWRC</a> ontology.
+export.header                       = Export publications
+export.html.faq                     = This gives you a simple <a href="http://en.wikipedia.org/wiki/HTML">HTML</a> formatted page which you can include into your homepage.
+export.info                         = By selecting one of the formats you can export the publications of the page {0} in that format.
+export.jabref.explain               = These export filters are from <a href="http://jabref.sourceforge.net/">JabRef</a>, a tool to manage publication references on the desktop.<br />\n\u0009\u0009It includes a mechanism to write layout files which allow the export of references in a nicely formatted way.
+export.json.faq                     = <a href="http://www.json.org/">JSON</a> (JavaScript Object Notation) is a lightweight exchange format for web programming with JavaScript. Using the <tt>callback</tt> parameter you get output in JSONP format.
+export.layout                       = export layout
+export.rss.faq                      = With an appropriate <a href="http://en.wikipedia.org/wiki/RSS">RSS</a>-tool you can subscribe to this RSS feed and get notifications when someone adds publications to it.
+export.swrc.faq                     = This is an <a href="http://en.wikipedia.org/wiki/RDF">RDF</a> output according to the <a href="http://ontoware.org/projects/swrc/">SWRC</a> ontology.
 
 # RSS feed titles
 feeds.bookmark    = Bookmark RSS feed for
@@ -1885,12 +1887,12 @@ previous = &lang;
 
 privacy = privacy
 
+publication.documents.rename            = Rename Document
+publication.documents.rename.progress   = renaming document
+publication.documents.rename.success    = Renamed document.
 publication.export.simple_bibtex.title  = show this publication in BibTeX format
 publication.export.simple_endnote.title = export this publication in Endnote format
 publication.export.title                = show this publication in {0} format
-publication.documents.rename          = Rename Document
-publication.documents.rename.progress = renaming document
-publication.documents.rename.success  = Renamed document.
 publication.import.title                = Import publications
 
 publications = publications
